Completed portfolio.html

--- a/scrooge.html
+++ b/scrooge.html
@@ -49,7 +49,7 @@
     .crop img {
         position: relative; /* allows repositioning */
         bottom: 100%; /* move the whole width of the image to the right */
-        margin-bottom: 0%; /* magic! */ /*-19%*/
+        margin-bottom: -19%; /* magic! */
         /*margin: 0px 0px -147px 0px;*/
     }
 
@@ -91,7 +91,7 @@
       </div>
       <div class="col-xs-6">
         <div class="crop">
-          <img draggable="false" class="img-responsive center-block" src="img/scrooge.jpg" alt="Games of coin">
+          <img draggable="false" class="img-responsive center-block" src="https://i.pinimg.com/originals/3c/21/59/3c21597bbf796d83a2a678db16c04434.jpg" alt="Games of coin">
         </div>
       </div>
       <div class="col-xs-3">
