--- a/portfolio.html
+++ b/portfolio.html
@@ -109,22 +109,15 @@
       border-radius: 8%;
     }
 
-    .wd {
-      max-width: 30%;
+    .noselect {
+      -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+         -khtml-user-select: none; /* Konqueror HTML */
+           -moz-user-select: none; /* Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+                user-select: none; /* Non-prefixed version, currently
+                                      supported by Chrome and Opera */
     }
-
-/*.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s;
-  background-color: #56bddc;
-}*/
 
   </style>
 </head>
@@ -157,26 +150,19 @@
         <h2 class="text-center"><i class="fa fa-user-o " aria-hidden="true"></i> About me</h2>
           <br>
           <div class="bodyContent bg-pale-info">
-
-
             <div class="row">
               <div class="col-xs-12 col-md-4">
-                <!-- https://cdn2.iconfinder.com/data/icons/software-development-glyph-black/2048/5438_-_Software_Developer-512.png -->
-                <!-- https://i.pinimg.com/originals/b5/f1/49/b5f1492497affd86d16eab516edd266c.png -->
-                <!-- http://d19le1r6oli276.cloudfront.net/assets/Developer_icon@2x-1c2b56f315624d45396a5afa694ff9569695be1ae01ced48beecc220a1409209.png -->
-                <!-- https://cdn3.iconfinder.com/data/icons/web-design-and-development-glyph-vol-1/64/web-development-glyph-04-512.png -->
-                <img src ="img/portfolio.png" alt="My profile image" title="Profile image" class="profilePic center-block">
+                <!-- https://s33.postimg.org/wnit8d29b/portfolio.png -->
+                <img draggable="false" src ="img/portfolio.png" alt="My profile image" title="Profile image" class="profilePic center-block">
               </div>
               <div class="col-xs-12 col-md-8">
                 <p class="lead">
                 I'm Software Engineer. </p>
                 <p class="lead">A software engineer is a person who applies the principles of software engineering to the design, development, maintenance, testing, and evaluation of the software that make computers or other devices containing software work. </p>
-                <p class="lead">My main expertise is embedded, but I've decided to try myself in Web.
+                <p class="lead">This is not my main expertise, but I've decided to refresh my skills in Web.
                 </p>
               </div> 
             </div>
-
-
           </div>
       </div>
     </section>
@@ -190,42 +176,48 @@
           <div class="row">
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://pay.platimo.ua/" target="_blank">
-                <img src="img/platimo_prev.jpg" class="img-responsive portfolioPic" alt="PlatiMo!">
+                <!-- https://s33.postimg.org/4anbi28v3/platimo_prev.jpg -->
+                <img draggable="false" src="img/platimo_prev.jpg" class="img-responsive portfolioPic" alt="PlatiMo!">
               </a>
               <p class="lead">PlatiMo!</p>
               <p>Internet and Mobile payment service</p>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://codepen.io/lex8/full/dZYerQ/" target="_blank">
-                <img src="img/tribute_prev.jpg" class="img-responsive portfolioPic" alt="Build a Tribute Page: Scrooge McDuck">
+                <!-- https://s33.postimg.org/mdge99wzz/tribute_prev.jpg -->
+                <img draggable="false" src="img/tribute_prev.jpg" class="img-responsive portfolioPic" alt="Build a Tribute Page: Scrooge McDuck">
               </a>
               <p class="lead">Build a Tribute Page</p>
               <p>Basic Front End Development Project</p>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://codepen.io/lex8/full/pdEReP/" target="_blank">
-                <img src="img/portfolio_prev.jpg" class="img-responsive portfolioPic" alt="Build a Personal Portfolio Webpage">
+                <!-- https://s33.postimg.org/cg5dg84tr/portfolio_prev.jpg -->
+                <img draggable="false" src="img/portfolio_prev.jpg" class="img-responsive portfolioPic" alt="Build a Personal Portfolio Webpage">
               </a>
               <p class="lead">Build a Personal Portfolio Webpage</p>
               <p>Basic Front End Development Project</p>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://codepen.io/beugelaar/pen/pyLMqB" target="_blank">
-                <img src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 4">
+                <!-- https://s33.postimg.org/7hhv1odvj/coming-soon.jpg -->
+                <img draggable="false" src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 4">
               </a>
               <p class="lead">Stunning progect 4</p>
               <p>Coming Soon!</p>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://codepen.io/beugelaar/pen/RaqEQe" target="_blank">
-                <img src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 5">
+                <!-- https://s33.postimg.org/7hhv1odvj/coming-soon.jpg -->
+                <img draggable="false" src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 5">
               </a>
               <p class="lead">Stunning progect 5</p>
               <p>Coming Soon!</p>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
               <a href="https://codepen.io/beugelaar/pen/NrrMKN" target="_blank">
-                <img src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 6">
+                <!-- https://s33.postimg.org/7hhv1odvj/coming-soon.jpg -->
+                <img draggable="false" src="img/coming-soon.jpg" class="img-responsive portfolioPic" alt="Stunning progect 6">
               </a>
               <p class="lead">Stunning progect 6</p>
               <p>Coming Soon!</p>
