--- a/quote.html
+++ b/quote.html
@@ -19,6 +19,31 @@
   <!-- Include bootstrap JavaScript -->
   <script src="js/bootstrap-3.3.7.min.js"></script>
   <script type="text/javascript">
+    function quoteGenerate(){
+      var quotes = [
+        {
+          quote : 'quote1', 
+          author : 'author1', 
+          url : 'url1'
+        },
+        {
+          quote : 'quote2', 
+          author : 'author2', 
+          url : 'url2'
+        },
+        {
+          quote : 'quote3', 
+          author : 'author3', 
+          url : 'url3'
+        },
+        {
+          quote : 'quote4', 
+          author : 'author4', 
+          url : 'url4'
+        }
+      ];
+      return quotes;
+    }
 
   $(document).ready(function(){
 
